# catkin_amr

./: README.md
src/: README.md
src/amr_bringup/: CMakeLists.txt  package.xml
src/amr_bringup/launch/: all.launch  amrStart.sh  connectPC.launch  fixed_tf_tree.launch  handle_control.launch  laser_gmapping.launch  laser_gmapping_without_rviz.launch  navigation_run.launch  navigation_run_without_rviz.launch
src/base_node/: CMakeLists.txt  README.md  package.xml
src/base_node/action/: CtrlLamp.action
src/base_node/config/: base_node.yaml
src/base_node/include/base_node/: base.h  dealLampCmd.h
src/base_node/launch/: base_node.launch
src/base_node/src/: base.cpp  base_node.cpp  dealLampCmd.cpp
src/code_test/: CMakeLists.txt  package.xml
src/code_test/launch/: test.launch
src/code_test/sonar_avoiding/: CMakeLists.txt  package.xml
src/code_test/sonar_avoiding/launch/: sonar.launch
src/code_test/sonar_avoiding/src/: sonar_pulisher.cpp
src/code_test/src/: pub_batteryAndSonar.cpp
src/handle/: CMakeLists.txt  package.xml
src/handle/cfg/: we_joy_control.yaml
src/handle/launch/: we_joy_control.launch
src/handle/src/: .handle_control.cpp.swp  handle_control.cpp
src/lslidar_n301/: README.md
src/lslidar_n301/lslidar_n301_decoder/launch/: lslidar_n301.launch
src/netbase_communicate/: CMakeLists.txt  package.xml
src/netbase_communicate/include/netbase_communicate/: netbase_communicate.h
src/netbase_communicate/src/: netbase_communicate.cpp  netbase_communicate_node.cpp
src/netbase_msgs/: CMakeLists.txt  package.xml
src/netbase_msgs/msg/: netbase_msgs.msg
src/robot_location/: CMakeLists.txt  README.md  package.xml
src/robot_location/launch/: show_path.launch
src/robot_location/rviz/: show_path.rviz
src/robot_location/src/: show_path1.cpp  show_path2.cpp
src/robot_pose_ekf/: README.md
src/robot_pose_ekf/launch/: robot_pose_ekf.launch
src/set_nav_goals/: CMakeLists.txt  README.md  package.xml
src/set_nav_goals/cfg/: goals (复件).txt  goals.txt  txt文本注意事项
src/set_nav_goals/include/: zjucmd.h  zjucode.h  zjudeal.h
src/set_nav_goals/include/set_nav_goals/: control_lamp.h  moveCtrl.h  set_goals.h
src/set_nav_goals/launch/: set_nav_goals.launch
src/set_nav_goals/scripts/: random_navigation (复件).py  set_nav_goals.py  最初.py
src/set_nav_goals/src/: control_lamp.cpp  debug.1.txt  debug.txt  moveCtrl.cpp  set_goals.cpp  set_goals_node.cpp  zjucmd.cc  zjucode.cc  zjudeal.cc
src/set_navigation/: CMakeLists.txt  README.md  package.xml
src/set_navigation/cfg/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  与震荡相关参数
src/set_navigation/launch/: move_base.launch  navigation.launch  navigation_rviz.launch
src/set_navigation/rviz/: navigation.rviz
src/set_slam/: CMakeLists.txt  package.xml
src/set_slam/launch/: amr_gmapping.launch  amr_gmapping_rviz.launch  save_map.launch
src/set_slam/maps/: shenhao.yaml  shenhao2.pgm  shenhao2.yaml  test_map.yaml  test_map2.pgm  test_map2.yaml
src/set_slam/maps/backup/: shenhao.pgm  test_map.pgm
src/set_slam/rviz/: slam_gmapping_rviz.rviz
src/set_slam/src/: save_map.cpp
src2/base_controller/: CMakeLists.txt  package.xml
src2/base_controller/include/base_controller/: base_controller.h
src2/base_controller/launch/: base_controller.launch
src2/base_controller/src/: base_controller.cpp  base_controller_node.cpp
src2/handle_control/: README.md
src2/handle_control/joy_control/: CMakeLists.txt  package.xml
src2/handle_control/joy_control/cfg/: we_joy_control.yaml  we_joy_control1.yaml
src2/handle_control/joy_control/launch/: we_joy_control.launch
src2/handle_control/joy_control/src/: joy_teleop.cpp  sup.cpp  sup.h
