<package>

  <name>netbase_msgs</name>
  <version>1.2.0</version>
  <description>
    ROS message definitions for xxxx.
  </description>
  <maintainer email="xxxx@xxxx.com">xxxx xxxx</maintainer>
  <author>xxxx xxxx</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
