<?xml version="1.0"?>
<package>
  <name>set_nav_goals</name>
  <version>0.2.4</version>
  <description>The set_nav_goals package</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/simple_navigation_goals_tutorial</url>
  <url type="repository">https://github.com/ros-planning/navigation_tutorials</url>
  <url type="bugtracker">https://github.com/ros-planning/navigation_tutorials/issues</url>

  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

<build_depend>message_generation</build_depend>
<run_depend>message_runtime</run_depend>
<build_depend>actionlib_msgs</build_depend>
<build_depend>netbase_msgs</build_depend>

<run_depend>actionlib_msgs</run_depend>
<run_depend>message_generation</run_depend>
<run_depend>netbase_msgs</run_depend>

<build_depend>std_msgs</build_depend>
<run_depend>std_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- 生成依赖库，给其他功能包调用 -->

    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lcontrol_lamp"/>
  </export>

</package>